--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vintage Car</title>
+    <link href="https://fonts.googleapis.com/css?family=Sonsie+One" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.main.min.css">
 </head>
 <body>
-
+    <header class="header clearfix">
+        <section class="menu header__menu">
+            <div class="wrapper menu__wrapper">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="#" class="menu__link">about us</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">contact us</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">history</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">collection</a></li>
+                </ul>
+            </div>
+        </section>
+        <img src="img/logo.png" alt="logo" class="header__logo">
+    </header>
 </body>
 </html>
