--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -20,5 +20,28 @@
         </section>
         <img src="img/logo.png" alt="logo" class="header__logo">
     </header>
+    <section class="slider">
+        <ul id="sb-slider" class="sb-slider">
+            <li>
+                <img class="slider__image" src="img/slider-1.jpg" alt="" />
+            </li>
+            <li>
+                <img class="slider__image" src="img/slider-2.jpg" alt="" />
+            </li>
+            <li>
+                <img class="slider__image" src="img/slider-3.jpg" alt="" />
+            </li>
+        </ul>
+        <div id="nav-arrows" class="nav-arrows">
+            <a href="#">Next</a>
+            <a href="#">Previous</a>
+        </div>
+    </section>
+
+    <script
+            src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+    <script src="js/script.main.min.js"></script>
 </body>
 </html>
