added read-more block

--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Vintage Car</title>
     <link href="https://fonts.googleapis.com/css?family=Sonsie+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.main.min.css">
 </head>
 <body>
@@ -32,10 +34,74 @@
                 <img class="slider__image" src="img/slider-3.jpg" alt="" />
             </li>
         </ul>
-        <div id="nav-arrows" class="nav-arrows">
-            <a href="#">Next</a>
-            <a href="#">Previous</a>
+        <div id="nav-arrows" class="nav-arrows slider__arrow">
+            <a href="#" class="slider__link"><img src="img/arrow.png" alt=""></a>
+            <a href="#" class="slider__link"><img src="img/arrow.png" alt=""></a>
         </div>
+    </section>
+    <section class="read-more">
+        <div class="wrapper read-more__wrapper">
+            <ul class="read-more__list">
+                <li class="read-more__item">
+                    <section class="car">
+                        <img src="img/car-1.svg" alt="car" class="car__image">
+                        <h1 class="car__year">1954</h1>
+                        <p class="car__description">
+                            Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
+                            Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
+                        </p>
+                        <a href="#" class="car__link">Read More</a>
+                    </section>
+                </li>
+                <li class="read-more__item">
+                    <section class="car">
+                        <img src="img/car-2.svg" alt="car" class="car__image">
+                        <h1 class="car__year">1958</h1>
+                        <p class="car__description">
+                            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
+                            vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
+                        </p>
+                        <a href="#" class="car__link">Read More</a>
+                    </section>
+                </li>
+                <li class="read-more__item">
+                    <section class="car">
+                        <img src="img/car-3.svg" alt="car" class="car__image">
+                        <h1 class="car__year">1963</h1>
+                        <p class="car__description">
+                            Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
+                            Claritas est etiam processus dynamicus, qui sequitur mutationem
+                        </p>
+                        <a href="#" class="car__link">Read More</a>
+                    </section>
+                </li>
+                <li class="read-more__item">
+                    <section class="car">
+                        <img src="img/car-4.svg" alt="car" class="car__image">
+                        <h1 class="car__year">1966</h1>
+                        <p class="car__description">
+                            Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
+                            Claritas est etiam processus dynamicus, qui sequitur mutationem
+                        </p>
+                        <a href="#" class="car__link">Read More</a>
+                    </section>
+                </li>
+            </ul>
+        </div>
+        <section class="read-more__description clearfix">
+            <div class="wrapper read-more__wrapper">
+                <img src="img/read-more-logo.png" alt="read-more-logo" class="read-more__logo">
+                <h1 class="read-more__title">The Phantom II</h1>
+                <h2 class="read-more__subtitle">The Rolls-Royce Phantom II was the third and last of Rolls-Royce's 40/50
+                    hp models, replacing the New Phantom in 1929.</h2>
+                <p class="read-more__description-text">
+                    The Phantom II used a refinement of the Phantom I's 7.7 L (7,668 cc or 467.9 cu in) pushrod-OHV
+                    straight-6 engine with a new crossflow cylinder head. Unlike on previous 40/50 hp models, the
+                    engine was bolted directly to the 4-speed manual transmission. Synchromesh was added on gears 3
+                    and 4 in 1932 and on gear 2 in 1935
+                </p>
+            </div>
+        </section>
     </section>
 
     <script
