added gallery block

--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -103,6 +103,60 @@
             </div>
         </section>
     </section>
+    <section class="gallery clearfix">
+        <div class="wrapper gallery__wrapper">
+            <section class="slider">
+                <div class="flexslider carousel">
+                    <ul class="slides">
+                        <li>
+                            <img src="img/carousel-1.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-2.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-3.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-4.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-1.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-2.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-3.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-4.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-1.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-2.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-3.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-4.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-1.png" alt="carousel">
+                        </li>
+                        <li>
+                            <img src="img/carousel-2.png" alt="carousel">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+    </section>
+
+
 
     <script
             src="https://code.jquery.com/jquery-2.2.4.min.js"
