--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -155,6 +155,55 @@
             </section>
         </div>
     </section>
+    <footer class="footer">
+        <section class="footer__info">
+            <div class="wrapper footer__wrapper">
+                <section class="description footer__description_about">
+                    <h1 class="description__title">About</h1>
+                    <p class="description__text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                        esse molestie consequat, vel illum dolore eu feugiat nulla
+                        facilisis at vero eros et accumsan et iusto odio dignissim qui
+                        blandit praesent luptatum zzril delenit augue duis dolore te
+                        feugait nulla facilisi. Nam liber tempor cum soluta nobis
+                        eleifend option congue nihil imperdiet doming id quod mazim
+                        placerat facer possim assum.
+                    </p>
+                </section>
+                <section class="description footer__description_contact-us">
+                    <h1 class="description__title">Contact Us</h1>
+                    <p class="description__text">DieSachbearbeiter
+                        Schönhauser Allee 167c
+                        10435 Berlin
+                        Germany
+                        Telephone: +49 30 47373795
+                        E-mail: moin@blindtextgenerator.de
+                    </p>
+                </section>
+                <section class="social footer__social">
+                    <h1 class="social__title">Social with us</h1>
+                    <ul class="social__list">
+                        <li class="social__item"><a href="#" class="social__link social__link_facebook"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link_xing"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link_youtube"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link_vimeo"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link_linked"></a></li>
+                        <li class="social__item"><a href="#" class="social__link social__link_yahoo"></a></li>
+                    </ul>
+                    <form action="#" class="social__form">
+                        <input type="email" class="social__email" placeholder="Enter your email address.">
+                        <button type="submit" class="social__submit">
+                            <img src="img/social-submit.png" alt="submit" class="social__submit-image">
+                        </button>
+                    </form>
+                </section>
+            </div>
+        </section>
+        <section class="footer__copyright clearfix">
+            <div class="wrapper footer__wrapper footer__wrapper_copyright">
+                <pre class="footer__copyright-text">Copyright 2015 Classic Vintage Car | All Rights Reserved  |  Design By Creativegeek.biz</pre>
+            </div>
+        </section>
+    </footer>
 
 
 
