create responsive for 1024<x<1280

--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -156,7 +156,7 @@
         </div>
     </section>
     <footer class="footer">
-        <section class="footer__info">
+        <section class="footer__info clearfix">
             <div class="wrapper footer__wrapper">
                 <section class="description footer__description_about">
                     <h1 class="description__title">About</h1>
@@ -204,9 +204,6 @@
             </div>
         </section>
     </footer>
-
-
-
     <script
             src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
