create responsive for 768<x<1024

--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -12,6 +12,7 @@
     <header class="header clearfix">
         <section class="menu header__menu">
             <div class="wrapper menu__wrapper">
+                <img src="img/menu-mobile.png" alt="" class="menu__mobile">
                 <ul class="menu__list">
                     <li class="menu__item"><a href="#" class="menu__link">about us</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">contact us</a></li>
