create responsive for <480

--- a/test/Vintage Car/src/index.html
+++ b/test/Vintage Car/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <title>Vintage Car</title>
     <link href="https://fonts.googleapis.com/css?family=Sonsie+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
@@ -41,7 +42,7 @@
         </div>
     </section>
     <section class="read-more">
-        <div class="wrapper read-more__wrapper">
+        <div class="wrapper read-more__wrapper clearfix">
             <ul class="read-more__list">
                 <li class="read-more__item">
                     <section class="car">
@@ -201,7 +202,7 @@
         </section>
         <section class="footer__copyright clearfix">
             <div class="wrapper footer__wrapper footer__wrapper_copyright">
-                <pre class="footer__copyright-text">Copyright 2015 Classic Vintage Car | All Rights Reserved  |  Design By Creativegeek.biz</pre>
+                <p class="footer__copyright-text">Copyright 2015 Classic Vintage Car | All Rights Reserved  |  Design By Creativegeek.biz</p>
             </div>
         </section>
     </footer>
