--- a/my works/URLAUBSGLÜCK (responsive, ie8+, ajax, gulp)/src/index.html
+++ b/my works/URLAUBSGLÜCK (responsive, ie8+, ajax, gulp)/src/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 	<title>Urlaubsglück</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/style.main.min.css">
   <!--[if IE 8]>
